--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.10",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": {
+    "url": "https://github.com/oikumo/naive-tests-ts"
+  },
   "files": [
     "dist"
   ],
