--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": {
+    "type": "git",
     "url": "https://github.com/oikumo/naive-tests-ts"
   },
   "files": [
